--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
         <item>मेरी पसंदीदा खबरे </item>
         <item>रिपोर्ट करें </item>
         <item>डाटा सेविंग </item>
+        <item>अधिसूचना</item>
         <item>सुझाव </item>
         <item>कैश को साफ़ करें</item>
         <item>रेटिंग करें </item>
