--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,5 @@
     <string name="video_tv">लाइव टीवी </string>
     <string name="size_of_text">पाठ का साइज़</string>
     <string name="khas_kabre">ख़ास ख़बरें</string>
+    <string name="video_extra">वीडियो</string>
 </resources>
