--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,7 +58,7 @@
     <string name="size_text">शब्दो का आकर </string>
     <string name="suggestion">सुझाव </string>
     <string name="save">जमा करे</string>
-    <string name="relative">सम्बंधित</string>
+    <string name="relative">सम्बंधित  खबरें</string>
 
     <string name="aboutus">हमारे बारे में</string>
     <string name="rules">नियम और शर्ते </string>
